--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 </body>
-<script src="js/main.js">
-
-</script>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/jquery.lorrydoc.js"></script>
+<script src="js/main.js"></script>
 </html>
