--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       </div>
     </div>
   </div>
+  <footer> © 2021 LorryDoc, Inc </footer>
 </body>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/jquery.lorrydoc.js"></script>
