--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,6 +11,7 @@
   <div class="lorrydoc-main container-fluid">
     <div class="row">
       <div class="lorrydoc-welcome-container col-12">
+          <div id="image_lorry"></div>
         <h3>
           Welcome to LorryDoctor
         </h3>
@@ -26,8 +27,8 @@
     </div>
   </div>
   <footer> © 2021 LorryDoc, Inc </footer>
-</body>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/jquery.lorrydoc.js"></script>
 <script src="js/main.js"></script>
+</body>
 </html>
