--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,12 @@
     </div>
   </div>
   <footer> © 2021 LorryDoc, Inc </footer>
-<script src="js/jquery-3.4.1.min.js"></script>
-<script src="js/jquery.lorrydoc.js"></script>
-<script src="js/main.js"></script>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
+  <script src="js/jquery.lorrydoc.js"></script>
+  <script src="js/main.js"></script>
+  <script>
+    feather.replace()
+  </script>
 </body>
 </html>
