Uppdate_dmitri_db

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <div class="lorrydoc-welcome-container col-12">
           <div id="image_lorry"></div>
         <h3>
-          Welcome to LorryDoctor
+          Welcome to <br/>LorryDoctor
         </h3>
       </div>
     </div>
