--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,33 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
-  <div class="lorrydoc-main container-fluid">
-    <div class="row">
-      <div class="lorrydoc-welcome-container col-12">
-          <div id="image_lorry"></div>
-        <h3>
-          Welcome to <br/>LorryDoctor
-        </h3>
-      </div>
+    <div id="app-container">
+    <div class="lorrydoc-main container-fluid">
+        <div class="row">
+            <div class="lorrydoc-welcome-container col-12">
+                <div id="image_lorry"></div>
+                <h3>
+                    Welcome to <br />LorryDoctor
+                </h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="lorrydoc-container col-12">
+            </div>
+        </div>
+        <div class="row">
+            <div class="lorrydoc-solution-container col-12">
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <div class="lorrydoc-container col-12">
-      </div>
     </div>
-    <div class="row">
-      <div class="lorrydoc-solution-container col-12">
-      </div>
-    </div>
-  </div>
-  <footer> © 2021 LorryDoc, Inc </footer>
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="https://unpkg.com/feather-icons"></script>
-  <script src="js/jquery.lorrydoc.js"></script>
-  <script src="js/main.js"></script>
-  <script>
-    feather.replace();
-  </script>
+    <footer> © 2021 LorryDoc, Inc </footer>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="js/jquery.lorrydoc.js"></script>
+    <script src="js/main.js"></script>
+    <script>
+        feather.replace();
+    </script>
 </body>
 </html>
