--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,18 @@
         </div>
     </div>
     </div>
-    <footer> © 2021 LorryDoc, Inc </footer>
+    <footer> © 2021 LorryDoc, Inc 
+        <div id="page-cont">
+            <h4 id="support">Support</h4>
+            <a href="https://www.sosalarm.se">Sosalarm - 112</a> <br />
+            <a href="https://www.trafikverket.se">Trafikverket -  0771-921 921</a> <br />
+            <a href="https://assistancekaren.se/kontakta-oss/ ">Assistancekåren -  020-912 912</a> <br />
+        </div>
+        <div id="forum-cont">
+            <a href="https://www.truckstop.tulldahl.se/forum/">Truckstop Forum</a> <br />
+            <a href="https://www.maskinisten.net/viewforum.php?f=184 ">Maskinisten Forum</a> <br />
+        </div>
+    </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="js/jquery.lorrydoc.js"></script>
